--- a/LEDIS/Web.config
+++ b/LEDIS/Web.config
@@ -53,6 +53,6 @@
   </system.webServer>
 
   <connectionStrings>
-    <add name="LEMESEntity" connectionString="metadata=res://*/LEMO.csdl|res://*/LEMO.ssdl|res://*/LEMO.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=192.168.1.57;Initial Catalog=SMART_MES;User ID=sa;Password=Sa123456;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="LEMESEntity" connectionString="metadata=res://*/LEMO.csdl|res://*/LEMO.ssdl|res://*/LEMO.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost;Initial Catalog=SMART_MES;User ID=sa;Password=1234;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
